tests/dataset/tpc-ds/compiler/c/q24.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:38Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _avg_float(list_float v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct StoreSale StoreSale;
typedef struct StoreReturn StoreReturn;
typedef struct Store Store;
typedef struct Item Item;
typedef struct Customer Customer;
typedef struct CustomerAddress CustomerAddress;

typedef struct {
  const char *c_last_name;
  const char *c_first_name;
  const char *s_store_name;
  double paid;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_ticket_number;
  int ss_item_sk;
  int ss_customer_sk;
  int ss_store_sk;
  double ss_net_paid;
} store_sale_t;

typedef struct {
  int sr_ticket_number;
  int sr_item_sk;
} store_return_t;

typedef struct {
  int s_store_sk;
  const char *s_store_name;
  int s_market_id;
  const char *s_state;
  const char *s_zip;
} store_t;

typedef struct {
  int i_item_sk;
  const char *i_color;
  double i_current_price;
  int i_manager_id;
  const char *i_units;
  const char *i_size;
} item_t;

typedef struct {
  int c_customer_sk;
  const char *c_first_name;
  const char *c_last_name;
  int c_current_addr_sk;
  const char *c_birth_country;
} customer_t;

typedef struct {
  int ca_address_sk;
  const char *ca_state;
  const char *ca_country;
  const char *ca_zip;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_last_name;
  int c_first_name;
  int s_store_name;
  int color;
  double netpaid;
} ssales_item_t;
typedef struct {
  int len;
  ssales_item_t *data;
} ssales_item_list_t;
ssales_item_list_t create_ssales_item_list(int len) {
  ssales_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ssales_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_last_name;
  int c_first_name;
  int s_store_name;
  double paid;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_ticket_number;
  int ss_item_sk;
  int ss_customer_sk;
  int ss_store_sk;
  double ss_net_paid;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreReturn {
  int sr_ticket_number;
  int sr_item_sk;
} StoreReturn;
typedef struct {
  int len;
  store_return_t *data;
} store_return_list_t;
store_return_list_t create_store_return_list(int len) {
  store_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Store {
  int s_store_sk;
  char *s_store_name;
  int s_market_id;
  char *s_state;
  char *s_zip;
} Store;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
  char *i_color;
  double i_current_price;
  int i_manager_id;
  char *i_units;
  char *i_size;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Customer {
  int c_customer_sk;
  char *c_first_name;
  char *c_last_name;
  int c_current_addr_sk;
  char *c_birth_country;
} Customer;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CustomerAddress {
  int ca_address_sk;
  char *ca_state;
  char *ca_country;
  char *ca_zip;
} CustomerAddress;
typedef struct {
  int len;
  customer_address_t *data;
} customer_address_list_t;
customer_address_list_t create_customer_address_list(int len) {
  customer_address_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_address_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q24_customer_net_paid_result;
static void test_TPCDS_Q24_customer_net_paid() {
  tmp1_t tmp1[] = {(tmp1_t){.c_last_name = "Smith",
                            .c_first_name = "Ann",
                            .s_store_name = "Store1",
                            .paid = 100.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q24_customer_net_paid_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q24_customer_net_paid_result.len; i3++) {
      if (test_TPCDS_Q24_customer_net_paid_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_ticket_number = 1,
                                               .ss_item_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_store_sk = 1,
                                               .ss_net_paid = 100.0},
                                (store_sale_t){.ss_ticket_number = 2,
                                               .ss_item_sk = 2,
                                               .ss_customer_sk = 2,
                                               .ss_store_sk = 1,
                                               .ss_net_paid = 50.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  store_return_t store_returns[] = {
      (store_return_t){.sr_ticket_number = 1, .sr_item_sk = 1},
      (store_return_t){.sr_ticket_number = 2, .sr_item_sk = 2}};
  int store_returns_len = sizeof(store_returns) / sizeof(store_returns[0]);
  store_t store[] = {(store_t){.s_store_sk = 1,
                               .s_store_name = "Store1",
                               .s_market_id = 5,
                               .s_state = "CA",
                               .s_zip = "12345"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  item_t item[] = {(item_t){.i_item_sk = 1,
                            .i_color = "RED",
                            .i_current_price = 10.0,
                            .i_manager_id = 1,
                            .i_units = "EA",
                            .i_size = "M"},
                   (item_t){.i_item_sk = 2,
                            .i_color = "BLUE",
                            .i_current_price = 20.0,
                            .i_manager_id = 2,
                            .i_units = "EA",
                            .i_size = "L"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  customer_t customer[] = {(customer_t){.c_customer_sk = 1,
                                        .c_first_name = "Ann",
                                        .c_last_name = "Smith",
                                        .c_current_addr_sk = 1,
                                        .c_birth_country = "Canada"},
                           (customer_t){.c_customer_sk = 2,
                                        .c_first_name = "Bob",
                                        .c_last_name = "Jones",
                                        .c_current_addr_sk = 2,
                                        .c_birth_country = "USA"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1,
                          .ca_state = "CA",
                          .ca_country = "USA",
                          .ca_zip = "12345"},
      (customer_addres_t){.ca_address_sk = 2,
                          .ca_state = "CA",
                          .ca_country = "USA",
                          .ca_zip = "54321"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  ssales_item_list_t ssales = (ssales_item_list_t){0, NULL};
  list_float tmp4 = list_float_create(ssales.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < ssales.len; tmp6++) {
    ssales_item_t x = ssales.data[tmp6];
    tmp4.data[tmp5] = x.netpaid;
    tmp5++;
  }
  tmp4.len = tmp5;
  double avg_paid = _avg_float(tmp4);
  result_item_list_t tmp7 = create_result_item_list(ssales.len);
  list_int *tmp10 = (list_int *)malloc(sizeof(list_int) * ssales.len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < ssales.len; tmp9++) {
    ssales_item_t x = ssales.data[tmp9];
    if (!(x.color == "RED" && x.netpaid > 0.05 * avg_paid)) {
      continue;
    }
    tmp7.data[tmp8] = (result_item_t){.c_last_name = x.c_last_name,
                                      .c_first_name = x.c_first_name,
                                      .s_store_name = x.s_store_name,
                                      .paid = x.netpaid};
    list_int result = list_int_create(3);
    result.data[0] = x.c_last_name;
    result.data[1] = x.c_first_name;
    result.data[2] = x.s_store_name;
    tmp10[tmp8] = result;
    tmp8++;
  }
  tmp7.len = tmp8;
  for (int i13 = 0; i13 < tmp8 - 1; i13++) {
    for (int i14 = i13 + 1; i14 < tmp8; i14++) {
      if (tmp10[i13] > tmp10[i14]) {
        list_int tmp11 = tmp10[i13];
        tmp10[i13] = tmp10[i14];
        tmp10[i14] = tmp11;
        result_item_t tmp12 = tmp7.data[i13];
        tmp7.data[i13] = tmp7.data[i14];
        tmp7.data[i14] = tmp12;
      }
    }
  }
  result_item_list_t result = tmp7;
  printf("[");
  for (int i15 = 0; i15 < 3; i15++) {
    if (i15 > 0)
      printf(",");
    result_item_t it = result.data[i15];
    printf("{");
    _json_string("c_last_name");
    printf(":");
    _json_int(it.c_last_name);
    printf(",");
    _json_string("c_first_name");
    printf(":");
    _json_int(it.c_first_name);
    printf(",");
    _json_string("s_store_name");
    printf(":");
    _json_int(it.s_store_name);
    printf(",");
    _json_string("paid");
    printf(":");
    _json_float(it.paid);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q24_customer_net_paid_result = result;
  test_TPCDS_Q24_customer_net_paid();
  free(tmp4.data);
  free(result.data);
  return 0;
}
